<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/nomePokemon"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:text="@string/name_pokemon"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imagemPokemon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/growlithe"
        android:scaleType="centerCrop"
        android:padding="30dp"
        app:layout_constraintStart_toStartOf="@+id/nomePokemon"
        app:layout_constraintTop_toBottomOf="@+id/nomePokemon"
        />

    <TextView
        android:id="@+id/nomeDescricao"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="@+id/imagemPokemon"
        app:layout_constraintTop_toBottomOf="@+id/imagemPokemon"
        style="@style/atributesStyle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardDescricao"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/imagemPokemon"
        app:layout_constraintTop_toBottomOf="@+id/nomeDescricao"
        style="@style/cardAtributesStyle">

        <TextView
            android:id="@+id/Descricao"
            android:layout_width="wrap_content"
            android:layout_margin="12dp"
            android:layout_height="wrap_content"
            android:text="@string/description_pokemon"
            android:textSize="16dp"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/nomeSkill"
        android:text="@string/skills"
        style="@style/atributesStyle"
        app:layout_constraintStart_toStartOf="@+id/cardDescricao"
        app:layout_constraintTop_toBottomOf="@+id/cardDescricao"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSkill"
        style="@style/cardAtributesStyle"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="@+id/imagemPokemon"
        app:layout_constraintTop_toBottomOf="@+id/nomeSkill">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/skill"
                android:layout_width="wrap_content"
                android:layout_margin="12dp"
                android:layout_height="wrap_content"
                android:text="@string/skills_default"
                android:textSize="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <Button
                android:id="@+id/buttonEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_theme_scarlet"
        android:layout_margin= "20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>